--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=developement nodemon server.js",
     "build": "npm install  && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "node server.js"
   },
   "type": "module",
   "keywords": [],
