--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=developement nodemon server.js",
+    "dev": "cross-env NODE_ENV=developement nodemon index.js",
     "build": "npm install  && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "type": "module",
   "keywords": [],
